# COMP6453-anamorphic-encryption

./: Cargo.toml  Makefile  README.md  elgamal.py
benches/: bench_utils.rs  cramer_shoup_bench.rs  elgamal_bench.rs  main_bench.rs  rsa_oaep_bench.rs
src/: cramer_shoup.rs  el_gamal.rs  el_gamal_pke.rs  groups.rs  helpers.rs  lib.rs  main.rs  pke.rs  rsa.rs  rsa_oaep.rs
